--- a/style.css
+++ b/style.css
@@ -58,34 +58,44 @@ body {
 }
 
 #account {
+    position: fixed;
+    bottom: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 600px;
+    width: 100vw;
     flex-direction: row;
-    background-color: #222;
-    border-radius: 10px;
-    height: 100px;
+    background-color: #222222b7;
+    height: 15%;
     padding: 10px;
 }
 
-#account h2 {
+#account .info {
     margin: 0;
-}
-
-#btns {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#account button {
-    background-color: #333;
     color: white;
+    font: 1em Arial, sans-serif;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 75%;	
+}
+
+.plusminus {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.plusminus button {
+    width: 70px;
+    height: 30px;
+    margin: 0 2px;
+    padding: 0;
+    font-size: 20px;
+    line-height: 1; 
+    background-color: #333;
     border: none;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 5px 0;
+    color: white; 
 }
 
 #account button:hover {
@@ -93,16 +103,140 @@ body {
     cursor: pointer;
 }
 
-.plusminus {
+.btns {
+    width: 25%;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.plusminus button {
-    width: 30px;
-    height: 30px;
-    margin: 0 5px;
-    padding: 0;
-    font-size: 20px;
-    line-height: 1;
+.btns #sortearBtn {
+    background-color: #333;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 5px 2px;
+    width: 200px;
+}
+
+/* REPONSIVIDADE */
+
+@media (max-width: 800px) {
+    #container {
+        width: 100%;
+        height: 100%;
+    }
+
+    #account .info {
+        display: flex;
+        flex-direction: column;
+        margin-left: 10%;
+    }
+
+    #account .btns {
+        margin-right: 10%;
+    }
+
+    #account {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 750px){
+    #container{
+        background-image: url('./assets/gridMedio.png');
+    }
+
+    .parent {
+        gap: 0px; /* Reduz o espaçamento entre as divs */
+    }
+
+    .parent img {
+        width: 90px;
+        height: 90px;
+    }
+}
+
+
+@media (max-width: 550px){
+
+    #account {
+        flex-direction: column;
+        height: auto;
+        padding: 5px;
+    }
+
+    #account .info {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    #account .btns {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .plusminus button {
+        width: 50px;
+        height: 30px;
+        font-size: 16px;
+    }
+
+    .btns #sortearBtn {
+        width: 50%;
+        padding: 10px;
+    }
+}
+
+@media (max-width: 385px) {
+    #container {
+        width: 100%;
+        height: 100%;
+        background-image: url('./assets/gridMenor.png'); 
+    }
+
+    .parent {
+        grid-template-columns: repeat(3, 80px); 
+        grid-template-rows: repeat(3, 80px); 
+        gap: 10px;
+    }
+
+    .parent img {
+        width: 60px; 
+        height: 60px;
+    }
+
+    #account {
+        flex-direction: column; 
+        height: auto; 
+        padding: 5px;
+    }
+
+    #account .info {
+        flex-direction: column; 
+        align-items: center;
+        width: 100%; 
+    }
+
+    #account .btns {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .plusminus button {
+        width: 50px; 
+        height: 30px;
+        font-size: 14px; 
+    }
+
+    .btns #sortearBtn {
+        width: 100%; 
+        padding: 10px;
+        font-size: 16px; 
+    }
 }
